# cv_project

sampleCode/: CMakeLists.txt  FinalTest  tese.cpp
sampleCode/include/: algorithm.hpp  opencv.hpp
sampleCode/src/: Global.cpp  Global.h  main.cpp  opencv.cpp
sampleCode/src/ui/: ui_mainwindow.h
